# Drowsy-Visiom

./: LICENSE  audio_alert.py  config.py  drowsiness_detector.py  email_notifier.py  main.py  pyproject.toml  utils.py  web_interface.py
